Boundless bleeding css fix

--- a/less/uw.body-content.less
+++ b/less/uw.body-content.less
@@ -63,13 +63,14 @@ a.more {
 	}
 	.uw-site-title {
 		position: absolute;
-		top: -135px;
+		top: -155px;
 		left: 11px;
 		color: #fff;
 		font-family: @font-family-headline;
 		font-size: 45px;
 		font-weight: 900;
 		-webkit-font-smoothing: antialiased;
+		text-shadow: 1px 1px 2px rgba(0,0,0,.5);
 		span {
 			font-weight: 700;
 		}
