--- a/less/uw.breadcrumbs.less
+++ b/less/uw.breadcrumbs.less
@@ -1,7 +1,7 @@
 // UW Breadcrumbs
 
 .uw-breadcrumbs {
-	margin: -30px 0 0 -30px;
+	margin: -22px 0 0 -30px;
 	background-color: white;
 	display: inline-block;
 	padding: 20px 20px 0 30px;
